# Airbus_SysSim

./: .gitignore  AUDIO_IMPLEMENTATION.txt  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
src/: alerts.cpp  alerts.h  main.cpp  prim_core.cpp  prim_core.h  sim_types.h  ui_panels.cpp  ui_panels.h
